--- a/src/assets/styles.css
+++ b/src/assets/styles.css
@@ -48,7 +48,7 @@ body {
   }
   
   button {
-    background-color: #FF4500;
+    background-color: #009dff;
     color: #FFFFFF;
     border: none;
     padding: 10px 20px;
@@ -56,7 +56,7 @@ body {
   }
   
   button:hover {
-    background-color: #FF6347;
+    background-color: #47ceff;
   }
 
 /* Responsive design */
